--- a/NodeMongoAPi/package.json
+++ b/NodeMongoAPi/package.json
@@ -10,11 +10,11 @@
   "author": "Pavel Pavlov",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
+    "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
   }
 }
